<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fg.nearbyrestaurant.LoginActivity"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_addres"
        android:ems="12"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_email_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="12"
        android:layout_below="@id/edit_email_address"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_password" />

    <Button
        android:text="@string/submit_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:id="@+id/btn_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:text="@string/not_register"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:id="@+id/text_not_register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignTop="@+id/text_not_register"
        android:layout_toRightOf="@+id/text_not_register"
        android:layout_toEndOf="@+id/text_not_register"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:id="@+id/text_register_user"/>

</RelativeLayout>
